[package]
name = "abol-codegen"
version = "0.1.0"
publish = false 
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }


[dependencies]
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
abol-parser = { workspace = true }
abol-core = { workspace = true }