[package]
name = "abol-core"
version = "0.1.0"
edition = "2024"
publish = false 
license = "MIT"

[dependencies]
rand = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
md-5 = { workspace = true }
zeroize = { workspace = true }
bytes = { workspace = true }
[profile.release]
debug = true
