[package]
name = "abol-core"
version = "0.1.0"
publish = false 
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[dependencies]
rand = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
md-5 = { workspace = true }
zeroize = { workspace = true }
bytes = { workspace = true }

