[package]
name = "abol-parser"
version = "0.1.0"
publish = true 
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }