[package]
name = "abol-rt"
version = "0.1.0"
publish = true 
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
description = "Runtime traits and async abstractions for the Abol RADIUS framework."

[dependencies]
async-trait = "0.1.88"
anyhow = { workspace = true }


