[package]
name = "abol-server"
version = "0.1.0"
publish = true 
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[dependencies]
abol-rt = { workspace = true }
abol-core = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }
