[package]
name = "abol-util"
version = "0.1.0"
edition = "2024"

[dependencies]
rt = { workspace = true }
pin-project-lite = "0.2.11"
tokio = { version = "1", optional = true, default-features = false }
smol = {version = "2", optional = true}
async-trait = "0.1.88"
[features]
tokio = ["dep:tokio"]
smol = ["dep:smol"]
