[package]
name = "abol-util"
version = "0.1.0"

edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[dependencies]
rt = { workspace = true }

pin-project-lite = "0.2"
async-trait = "0.1"

tokio = { workspace = true, optional = true }
smol = { workspace = true, optional = true }

[features]
tokio = ["dep:tokio"]
smol = ["dep:smol"]