[package]
name = "abol-util"
version = "0.1.0"
description = "Utilities and runtime implementations for the Abol RADIUS framework."

edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[dependencies]
rt = { workspace = true }
async-trait = "0.1"

tokio = { version = "1", optional = true }
smol = {version = "2", optional = true }

[features]
tokio = ["dep:tokio"]
smol = ["dep:smol"]