[package]
name = "dict_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
quote = "1.0.42"
proc-macro2 = "1.0.103"
dict_parser = { package="dict_parser", path = "../dict_parser" }
heck = "0.5.0"
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0"
radius_core = { package="core", path = "../core" }