[package]
name = "server-fuzz"
version = "0.0.0"
publish = false
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
abol-core = { workspace = true }
abol-codegen = { workspace = true }
bytes = { workspace = true }


[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
