[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
rt = {path = "../rt",features = ["tokio"]}
abol-codegen = {workspace = true}
abol-core = { workspace = true }
anyhow = "1.0"
async-trait = "0.1.88"
tokio = { version = "1",  features = ["full"] }
[features]
tokio = ["rt/tokio"]

