[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
rt = {path = "../rt",features = ["tokio"]}
abol-codegen = {workspace = true}
abol-core = { workspace = true }
anyhow = "1.0"
async-trait = "0.1.88"
tokio = { version = "1",  features = ["full"] }
moka = { version = "0.12", features = ["future"] }
[features]
tokio = ["rt/tokio"]

